ecmascript/parser/tests/typescript-errors/class/input.ts.stderr
error: TS1005
 --> $DIR/tests/typescript-errors/class/input.ts:2:5
  |
2 |   x?!: number;
  |     ^

error: Unexpected token Some(Bang)
 --> $DIR/tests/typescript-errors/class/input.ts:2:5
  |
2 |   x?!: number;
  |     ^

